--- a/frontend/src/app/pages/vehicles/details-vehicle/details-vehicle.html
+++ b/frontend/src/app/pages/vehicles/details-vehicle/details-vehicle.html
@@ -105,12 +105,12 @@
     <h3 class="text-lg font-semibold text-gray-800 mb-4">
       Motorista que mais utilizou
     </h3>
-    @if(topDriver) {
+    @if(topDriver?.name) {
     <div
       class="flex items-center gap-4 bg-gray-50 p-4 rounded-lg border border-gray-100"
     >
       <div>
-        <p class="text-sm font-medium text-gray-800">{{ topDriver.name }}</p>
+        <p class="text-sm font-medium text-gray-800">{{ topDriver?.name }}</p>
       </div>
     </div>
     } @else {
