--- a/frontend/src/app/pages/driver/details-driver/details-driver.html
+++ b/frontend/src/app/pages/driver/details-driver/details-driver.html
@@ -128,7 +128,7 @@
   <!-- Veículos utilizados -->
   <div class="mt-10 border-t border-gray-200 pt-6">
     <h3 class="text-lg font-semibold text-gray-800 mb-4">
-      Veículos utilizados
+      Veículos utilizados (Mes Atual)
     </h3>
 
     <div class="flex-1 overflow-y-auto">
@@ -155,7 +155,7 @@
   <!-- Despesas relacionadas -->
   <div class="mt-10 border-t border-gray-200 pt-6">
     <h3 class="text-lg font-semibold text-gray-800 mb-4">
-      Despesas relacionadas
+      Despesas relacionadas (Mes Atual)
     </h3>
 
     <div class="flex-1 overflow-y-auto">
