--- a/frontend/src/app/pages/vehicles/details-vehicle/details-vehicle.html
+++ b/frontend/src/app/pages/vehicles/details-vehicle/details-vehicle.html
@@ -176,6 +176,6 @@
     <h3 class="text-lg font-semibold text-gray-800 mb-4">
       Localização no mapa
     </h3>
-    <app-map />
+    <app-map [markers]="markers"/>
   </div>
 </div>
